Fix T44879, data transfer modifier was missing a copy function