source/blender/modifiers/intern/MOD_datatransfer.c
@@ -225,6 +225,15 @@ static DerivedMesh *applyModifier(ModifierData *md, Object *ob, DerivedMesh *der
 #undef HIGH_POLY_WARNING
 #undef DT_TYPES_AFFECT_MESH
 
+static void copyData(ModifierData *md, ModifierData *target)
+{
+#if 0
+	DataTransferModifierData *dtmd = (DecimateModifierData *) md;
+	DataTransferModifierData *tdtmd = (DecimateModifierData *) target;
+#endif
+	modifier_copyData_generic(md, target);
+}
+
 ModifierTypeInfo modifierType_DataTransfer = {
 	/* name */              "DataTransfer",
 	/* structName */        "DataTransferModifierData",
@@ -235,7 +244,7 @@ ModifierTypeInfo modifierType_DataTransfer = {
 	                        eModifierTypeFlag_SupportsEditmode |
 	                        eModifierTypeFlag_UsesPreview,
 
-	/* copyData */          NULL,
+	/* copyData */          copyData,
 	/* deformVerts */       NULL,
 	/* deformMatrices */    NULL,
 	/* deformVertsEM */     NULL,
